--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ entrypoints==0.3
 fastrank==0.7.0
 Flask==2.0.2
 Flask-Bootstrap4==4.0.2
+Flask-Cors==3.0.10
 Flask-Dance==5.1.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
